--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Web site created using create-react-app"
     />
 
-    <meta http-equiv="Cache-Control" content="max-age: 31536000, public, no-cache, no-store, must-revalidate">
-    <!-- <meta http-equiv="Pragma" content="no-cache" />
-	  <meta http-equiv="Expires" content="0" /> -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
